envoy.yaml
static_resources:
  listeners:
  - name: main_listener
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match: { prefix: "/echo_vault.", grpc: {} }
                route:
                  cluster: echovault_grpc
                  timeout: 0s
              - match: { prefix: "/api/v1/" }
                route:
                  cluster: echovault_rest
                  timeout: 0s
          http_filters:
          - name: envoy.filters.http.grpc_web
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
          - name: envoy.filters.http.cors
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
              allow_origin_string_match:
              - prefix: "*"
              allow_methods: GET, POST, PUT, DELETE, OPTIONS
              allow_headers: content-type, x-grpc-web, grpc-timeout, authorization
              max_age: "86400"
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: echovault_grpc
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: echovault_grpc
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: echovault-server, port_value: 9090 }

  - name: echovault_rest
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: echovault_rest
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: echovault-server, port_value: 9091 }
